Add auth google github
